# myNexus-JUCE

.github/workflows/: buildTwenty.yml  deleteRuns.yml
twentyPlayer/: CMakeList.txt  CMakeLists.txt  main.cpp
